src/components/detail/detail.module.scss
@use '../../styles/base';

.obscurer {
    width: 100%;
    background-color: rgba(128, 128, 128, 0.452);
    position: fixed;
    top: 0; left: 0; bottom: 0;
}

.detail {
    position: absolute;
    width: 80%;
    top: 50%;
    right: 50%;
    transform: translate(50%, -50%);
    background-color: white;
    animation: slide-up 0.5s;
    font-size: 1.25rem;
}

.header {
    background-color: base.$accent-color;
    color: base.$accent-font-color;
    font-size: 2rem;
    font-weight: bold;
    padding: 20px;
    position: relative;
}

.header > h1 {
    height: 50px;
    line-height: 50px;
}

.description {
    padding: 20px;
    height: 300px;
    white-space: pre-wrap;
}

.delete {
    width: 40px;
    height: 100%;
    color: white;
    background-color: red;
    border: none;
    outline: none;
    cursor: pointer;
}

.delete:hover {
    background-color: rgb(224, 0, 0);
}

.tools {
    background-color: base.$bg-color;
    display: grid;
    grid-template-columns: 1fr auto;
    border-top: 2.5px solid base.$border-color;
}

.tags {
    padding: 10px;
    height: auto;
}

.tags__item {
    padding: 5px;
    background-color: base.$bg-color;
    text-align: center;
    margin-right: 5px;
    border-radius: 15px;
    border: 2.5px solid base.$border-color;
    display: inline-block;
    cursor: pointer;
    height: 35px;
    transition: background-color 0.5s;
}

.tags__item:hover {
    background-color: base.$highlight;
}

.add {
    width: 35px; height: 35px;
    border-radius: 50%;
    // position: relative;
}

.close {
    background-color: transparent;
    color: base.$accent-font-color;
    position: absolute;
    font-size: 2rem;
    top: 50%;
    right: 20px;
    transform: translateY(-50%);
    border: none;
    outline: none;
    cursor: pointer;
    border-radius: 50%;
    transition: border 0.25s, right 0.25s;
    box-sizing: content-box;
}

.close:hover {
    border: 2.5px solid base.$accent-font-color;
    right: 17.5px;
}

@keyframes slide-up {
    from{top: 100%}
    to {top: 50%}
}

.input {
    background-color: transparent;
    resize: none;
    outline: none;
    border: none;
    font-family: inherit;
    font-size: inherit;
    font-weight: inherit;
    color: inherit;
    padding: 0;
    height: 50px;
    width: 75%;
}

.description > .input {
    height: 100%;
    width: 100%;
}

// tags

.tags-input::before {
    content: "";
    width: 100%;
    height: 5px;
    position: absolute;
    bottom: -5px;
    left: 0;
    background-color: transparent;
}

.tags-input {
    position: absolute;
    border: 2.5px solid base.$border-color;
    bottom: 50px;
    left: 10px;
    transform: translate(0, 0);
    box-shadow: base.$box-shadow;
    background-color: base.$bg-color;
    padding: 5px;
    font-size: 1rem;
    text-align: left;
    width: 90%;
    font-weight: normal;
    font-family: base.$main-font;
}

.tags-input__items {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    min-height: 150px;
    max-height: 250px;
}

.tags-input__tag > label {
    display: flex;
    justify-content: flex-start;
    cursor: pointer;
}

